crates/uv-resolver/src/lock/snapshots/uv_resolver__lock__installable__tests__concrete_fork.snap
---
source: crates/uv-resolver/src/lock/installable.rs
expression: graph_snapshot(&concrete_fork)
---
(
    [
        "forked==1.0.0 (install: true, hashes: sha256:2222222222222222222222222222222222222222222222222222222222222222)",
        "root",
    ],
    [
        "root --Prod--> forked==1.0.0 (install: true, hashes: sha256:2222222222222222222222222222222222222222222222222222222222222222)",
    ],
)
