crates/uv-resolver/src/lock/snapshots/uv_resolver__lock__installable__tests__darwin.snap
---
source: crates/uv-resolver/src/lock/installable.rs
expression: graph_snapshot(&darwin)
---
(
    [
        "dev-dependency==1.0.0 (install: true, hashes: sha256:1111111111111111111111111111111111111111111111111111111111111111)",
        "forked==1.0.0 (install: true, hashes: sha256:2222222222222222222222222222222222222222222222222222222222222222)",
        "optional-dependency==1.0.0 (install: true, hashes: sha256:4444444444444444444444444444444444444444444444444444444444444444)",
        "root",
        "root-a==1.0.0 (install: true, hashes: sha256:5555555555555555555555555555555555555555555555555555555555555555)",
        "shared==1.0.0 (install: true, hashes: sha256:7777777777777777777777777777777777777777777777777777777777777777)",
    ],
    [
        "root --Prod--> root-a==1.0.0 (install: true, hashes: sha256:5555555555555555555555555555555555555555555555555555555555555555)",
        "root-a==1.0.0 (install: true, hashes: sha256:5555555555555555555555555555555555555555555555555555555555555555) --Dev(GroupName(\"dev\"))--> dev-dependency==1.0.0 (install: true, hashes: sha256:1111111111111111111111111111111111111111111111111111111111111111)",
        "root-a==1.0.0 (install: true, hashes: sha256:5555555555555555555555555555555555555555555555555555555555555555) --Optional(ExtraName(\"feature\"))--> optional-dependency==1.0.0 (install: true, hashes: sha256:4444444444444444444444444444444444444444444444444444444444444444)",
        "root-a==1.0.0 (install: true, hashes: sha256:5555555555555555555555555555555555555555555555555555555555555555) --Prod--> forked==1.0.0 (install: true, hashes: sha256:2222222222222222222222222222222222222222222222222222222222222222)",
        "root-a==1.0.0 (install: true, hashes: sha256:5555555555555555555555555555555555555555555555555555555555555555) --Prod--> shared==1.0.0 (install: true, hashes: sha256:7777777777777777777777777777777777777777777777777777777777777777)",
    ],
)
