crates/uv-resolver/src/lock/snapshots/uv_resolver__lock__installable__tests__linux.snap
---
source: crates/uv-resolver/src/lock/installable.rs
expression: graph_snapshot(&linux)
---
(
    [
        "dev-dependency==1.0.0 (install: true, hashes: sha256:1111111111111111111111111111111111111111111111111111111111111111)",
        "forked==2.0.0 (install: true, hashes: sha256:3333333333333333333333333333333333333333333333333333333333333333)",
        "optional-dependency==1.0.0 (install: true, hashes: sha256:4444444444444444444444444444444444444444444444444444444444444444)",
        "root",
        "root-a==1.0.0 (install: true, hashes: sha256:5555555555555555555555555555555555555555555555555555555555555555)",
        "shared==1.0.0 (install: true, hashes: sha256:7777777777777777777777777777777777777777777777777777777777777777)",
    ],
    [
        "root --Prod--> root-a==1.0.0 (install: true, hashes: sha256:5555555555555555555555555555555555555555555555555555555555555555)",
        "root-a==1.0.0 (install: true, hashes: sha256:5555555555555555555555555555555555555555555555555555555555555555) --Dev(GroupName(\"dev\"))--> dev-dependency==1.0.0 (install: true, hashes: sha256:1111111111111111111111111111111111111111111111111111111111111111)",
        "root-a==1.0.0 (install: true, hashes: sha256:5555555555555555555555555555555555555555555555555555555555555555) --Optional(ExtraName(\"feature\"))--> optional-dependency==1.0.0 (install: true, hashes: sha256:4444444444444444444444444444444444444444444444444444444444444444)",
        "root-a==1.0.0 (install: true, hashes: sha256:5555555555555555555555555555555555555555555555555555555555555555) --Prod--> forked==2.0.0 (install: true, hashes: sha256:3333333333333333333333333333333333333333333333333333333333333333)",
        "root-a==1.0.0 (install: true, hashes: sha256:5555555555555555555555555555555555555555555555555555555555555555) --Prod--> shared==1.0.0 (install: true, hashes: sha256:7777777777777777777777777777777777777777777777777777777777777777)",
    ],
)
